--- a/app/app.css
+++ b/app/app.css
@@ -1,59 +1,8 @@
-/* app css stylesheet */
+/*a.navbar-brand {*/
+    /*background-color: yellow;*/
+/*}*/
 
 body {
+    /* needed to display div class="col-md-6" */
     margin-top: 60px;
-}
-
-.border {
-    border: 1px solid black;
-    padding: 15px;
-}
-
-.margin-bottom-100 {
-    margin-bottom: 100px;
-}
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
-}
-
-.hidden-element {
-    display: none;
-}
-
-.disabled-button {
-    opacity: 0.5;
-}
-
-.small-image {
-    width: 250px;
-}
-
-input.ng-invalid.ng-dirty {
-    background-color: pink;
-}
-
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
-}
-
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
 }
